--- a/src/index.css
+++ b/src/index.css
@@ -20,8 +20,19 @@ code {
 *::after {
   box-sizing: border-box;
   margin: 0;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 button{
   font: unset;
+}
+
+.oHidden{
+  overflow: hidden;
 }
