--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+:root{
+  --background-color: white;
+  --text-color: #24292e;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +10,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: white;
   height: 100vh;
-  color: #24292e;
+  background: var(--background-color);
+  color: var(--text-color);
 }
 
 code {
